Added test command to travis

--- a/travis.yml
+++ b/travis.yml
@@ -7,6 +7,7 @@ php:
 
 before_script:
   - wget http://getcomposer.org/composer.phar
-  - php composer.phar install
-  - phpunit
+  - php composer.phar install --dev
+
+script: phpunit --coverage-text
 
